--- a/style/layout/status.scss
+++ b/style/layout/status.scss
@@ -13,6 +13,7 @@
         margin: 0 0 12px 0;
         transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         overflow: hidden;
+        z-index: 3; // 等于数据库 sticky header，不会其被覆盖
 
         @include border-or-not($border:false);
     
